--- a/blogpost.html
+++ b/blogpost.html
@@ -5,10 +5,13 @@
     </head>
     <body>
         <div id="container">
-         <div id="post">
-            <h1>Este es un titulo atractivo e interesante del post</h1>
-            <p>Y este es el parrafo de inicio donde vamos a explicar coas increibes que se pueden hacer con ramas</p>
-         </div>    
+            <div id="cabecera">
+                cabecera
+            </div>
+            <div id="post">
+                <h1>Este es un titulo atractivo e interesante del post</h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar coas increibes que se pueden hacer con ramas</p>
+            </div>    
         </div>
         
     </body>
