--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,10 @@
          <div id="post">
             <h1>Este es un titulo atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar coas increibes que se pueden hacer con ramas</p>
+            <p>
+                Los blogs son la mejor forma de compartir infromacion y tus ideas.
+                Mucho mas que ir a conferencias o salir en Youtube.Excepto si eres un rockstar. Pero estadisticmente no lo eres .... por ahora.
+            </p>
          </div>    
         </div>
         
