--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,7 @@
             <div id="post">
                 <h1>Este es un titulo atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar coas increibes que se pueden hacer con ramas</p>
+                <p>Los blog son los mejores</p>
             </div>    
         </div>
         
