--- a/blogpost.html
+++ b/blogpost.html
@@ -7,12 +7,13 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Tu blog de maestro</span>
             </div>
             <div id="post">
                 <h1>Este es un titulo atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar coas increibes que se pueden hacer con ramas</p>
                 <p>Los blog son los mejores</p>
+                <p>Suscribete y dale like</p>
             </div>    
         </div>
         
